# Copyright 2018-2021 the Deno authors. All rights reserved. MIT license.

[package]
name = "deno_fs"
version = "0.1.0"
edition = "2018"
description = "Filesystem Access API for Deno"
authors = ["the Deno authors"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/denoland/deno"

[lib]
path = "lib.rs"

[dependencies]
deno_core = { version = "0.92.0", path = "../../core" }
deno_web = { version = "0.41.1", path = "../web" }

async-trait = "0.1.50"
